--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-router": "^3.4.7",
     "vuetify": "^2.6.0"
